<resources>
    <string name="app1312_name">Just Java</string>
    <string name="orderBtn">Order</string>
    <string name="titleQnt">Quantity</string>
    <string name="titleTpns">Toppings</string>
    <string name="tpn1">Whipped Cream</string>
    <string name="tpn2">Chocolate</string>
    <string name="order_summary">Order Summary</string>
    <string name="price_text_view">R$ 0,00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="customerName">Your name</string>

    <string name="thank_you">Thank you!</string>
    <string name="total">Total: </string>
    <string name="quantity">Quantity: </string>
    <string name="chocolate">Add Chocolate?</string>
    <string name="whipped_cream">Add Whipped Cream?</string>
</resources>
