<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielbispo.justjava.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customerName" />

        <TextView
            android:id="@+id/titleToppings"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/titleTpns"
            style="@style/header_text_style"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/tpn1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxChoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/tpn2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/titleQuantity"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/titleQnt"
            style="@style/header_text_style"/>

        <LinearLayout
            android:id="@+id/layoutUm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleQuantity"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/itemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="0"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:text="@string/plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_price"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_summary"
            style="@style/header_text_style"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/price_text_view"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutUm"
            android:paddingTop="8dp"
            android:text="@string/orderBtn" />
    </LinearLayout>
</ScrollView>

